data: Fix headerbar title outlining
The headerbar title used the same styleclass as was defined for
ArtistAlbumWidget.

Make the Music specific style names less generic to avoid overlap.

--- a/data/application.css
+++ b/data/application.css
@@ -12,10 +12,12 @@ flowbox, treeview, widget {
     padding: 0px;
 }
 
-.cover{
+/* ArtistAlbumWidget */
+.album-cover {
     padding-left:24px;
 }
-.title{
+
+.album-title {
     padding-left:24px;
 }
 
